@@ -13,6 +13,7 @@ import io.airbyte.commons.json.Jsons;
 import io.airbyte.db.Database;
 import io.airbyte.protocol.models.AirbyteMessage;
 import io.airbyte.protocol.models.AirbyteMessage.Type;
+import io.airbyte.protocol.models.AirbyteStateMessage;
 import io.airbyte.protocol.models.AirbyteStream;
 import io.airbyte.protocol.models.CatalogHelpers;
 import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
@@ -22,12 +23,14 @@ import io.airbyte.protocol.models.Field;
 import io.airbyte.protocol.models.JsonSchemaType;
 import io.airbyte.protocol.models.SyncMode;
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
@@ -42,7 +45,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
 
   private static final Logger LOGGER = LoggerFactory.getLogger(AbstractSourceDatabaseTypeTest.class);
 
-  private final List<TestDataHolder> testDataHolders = new ArrayList<>();
+  protected final List<TestDataHolder> testDataHolders = new ArrayList<>();
 
   /**
    * The column name will be used for a PK column in the test tables. Override it if default name is
@@ -106,9 +109,10 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
   public void testDataTypes() throws Exception {
     final ConfiguredAirbyteCatalog catalog = getConfiguredCatalog();
     final List<AirbyteMessage> allMessages = runRead(catalog);
-    final Map<String, AirbyteStream> streams = runDiscover().getStreams().stream()
+    final UUID catalogId = runDiscover();
+    final Map<String, AirbyteStream> streams = getLastPersistedCatalog().getStreams().stream()
         .collect(Collectors.toMap(AirbyteStream::getName, s -> s));
-    final List<AirbyteMessage> recordMessages = allMessages.stream().filter(m -> m.getType() == Type.RECORD).collect(Collectors.toList());
+    final List<AirbyteMessage> recordMessages = allMessages.stream().filter(m -> m.getType() == Type.RECORD).toList();
     final Map<String, List<String>> expectedValues = new HashMap<>();
     testDataHolders.forEach(testDataHolder -> {
       if (testCatalog()) {
@@ -179,7 +183,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
    *
    * @return configured catalog
    */
-  private ConfiguredAirbyteCatalog getConfiguredCatalog() {
+  protected ConfiguredAirbyteCatalog getConfiguredCatalog() {
     return new ConfiguredAirbyteCatalog().withStreams(
         testDataHolders
             .stream()
@@ -190,7 +194,7 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
                 .withStream(CatalogHelpers.createAirbyteStream(
                     String.format("%s", test.getNameWithTestPrefix()),
                     String.format("%s", getNameSpace()),
-                    Field.of(getIdColumnName(), JsonSchemaType.NUMBER),
+                    Field.of(getIdColumnName(), JsonSchemaType.INTEGER),
                     Field.of(getTestColumnName(), test.getAirbyteType()))
                     .withSourceDefinedCursor(true)
                     .withSourceDefinedPrimaryKey(List.of(List.of(getIdColumnName())))
@@ -240,6 +244,32 @@ public abstract class AbstractSourceDatabaseTypeTest extends AbstractSourceConne
 
   protected void printMarkdownTestTable() {
     LOGGER.info(getMarkdownTestTable());
+  }
+
+  protected ConfiguredAirbyteStream createDummyTableWithData(final Database database) throws SQLException {
+    database.query(ctx -> {
+      ctx.fetch("CREATE TABLE " + getNameSpace() + ".random_dummy_table(id INTEGER PRIMARY KEY, test_column VARCHAR(63));");
+      ctx.fetch("INSERT INTO " + getNameSpace() + ".random_dummy_table VALUES (2, 'Random Data');");
+      return null;
+    });
+
+    return new ConfiguredAirbyteStream().withSyncMode(SyncMode.INCREMENTAL)
+        .withCursorField(Lists.newArrayList("id"))
+        .withDestinationSyncMode(DestinationSyncMode.APPEND)
+        .withStream(CatalogHelpers.createAirbyteStream(
+            "random_dummy_table",
+            getNameSpace(),
+            Field.of("id", JsonSchemaType.INTEGER),
+            Field.of("test_column", JsonSchemaType.STRING))
+            .withSourceDefinedCursor(true)
+            .withSupportedSyncModes(Lists.newArrayList(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+            .withSourceDefinedPrimaryKey(List.of(List.of("id"))));
+
+  }
+
+  protected List<AirbyteStateMessage> extractStateMessages(final List<AirbyteMessage> messages) {
+    return messages.stream().filter(r -> r.getType() == Type.STATE).map(AirbyteMessage::getState)
+        .collect(Collectors.toList());
   }
 
 }
